--- a/TestDistribute/TestDistribute/MainPage.xaml
+++ b/TestDistribute/TestDistribute/MainPage.xaml
@@ -6,7 +6,7 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Master!" 
+        <Label Text="Welcome to Dev!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
     </StackLayout>
